# csp-adapter-slack

./: .bumpversion.cfg  .copier-answers.yaml  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  wiki.yaml  wiki.yml
csp_adapter_slack/: __init__.py  adapter.py  adapter_config.py  mention.py  message.py
csp_adapter_slack/examples/: hello.py
csp_adapter_slack/tests/: slack_csp_e2e.py  test_adapter.py
csp_adapter_slack/tests/v1/: slack_csp_e2e.py  test_adapter.py
csp_adapter_slack/v1/: adapter.py
csp_adapter_slack/v1/examples/: hello.py
docs/wiki/: API-Reference.md  Build-from-Source.md  Contribute.md  Examples.md  Home.md  Installation.md  Local-Development-Setup.md  Setup.md  _Footer.md  _Sidebar.md
docs/wiki/contribute/: Build-from-Source.md
